samples/_failures_safe/1761549984_8c7184_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7cb83121.c: In function ‘transition_state’:
./samples/SAFE/__tmp_7cb83121.c:170:13: error: expected declaration or statement at end of input
  170 |             return handle_error(sm, event, data);
      |             ^~~~~~
./samples/SAFE/__tmp_7cb83121.c:170:13: error: expected declaration or statement at end of input
